--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -24,7 +24,7 @@
 
     <%= stylesheet_link_tag :application, "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "rouge-theme-molokai.css", "data-turbo-track": "reload" %>
-    <%= stylesheet_link_tag "theme-1.css", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "#{theme_file_name}.css", "data-turbo-track": "reload" %>
 
     <style>
       label.required:after { content:"*" }
