--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -3,15 +3,14 @@
     <p>
       <%= t(:welcome_admin, email: Current.session.user.email_address) %>
     </p>
+
     <div class="mt-3">
       <a href="<%= new_admin_post_path %>">
         <button type="button" class="btn btn-primary"><%= t(:create_a_post) %></button>
       </a>
     </div>
     <br>
-    <%= link_to t(:website_display), "https://github.com/resumeblog/markdown-resume-blog/tree/main/docs/setup_website.md", "data-turbo": false, target: "_blank" %>
-    <br>
-    <br>
+
     <%= link_to "Categories", admin_categories_path %>
     <br>
     <br>
@@ -21,19 +20,37 @@
     <%= link_to "Email Subscribers", admin_email_subscribers_path %>
     <br>
     <br>
-    <%= link_to "Manage Locales", admin_locales_path %>
-    <br>
-    <br>
-    <%= link_to "Manage Subdomains", admin_subdomains_path %>
-    <br>
-    <br>
-    <%= link_to "Settings", admin_settings_path %>
-    <br>
-    <br>
-    <%= link_to "GitHub App settings", admin_github_app_settings_path %>
-    <br>
-    <br>
     <%= link_to "Jobs", jobs_path, "data-turbo": false, target: "_blank" %>
+    <br>
+    <br>
+
+    <div data-controller="toggle-settings">
+      <button data-toggle-settings-target="button"
+              data-action="click->toggle-settings#toggle"
+              class="btn btn-outline-secondary mt-3 mb-3">
+        Show Settings
+      </button>
+
+      <div data-toggle-settings-target="content" class="d-none" id="advanced-settings">
+        <%= link_to t(:website_display), "https://github.com/resumeblog/markdown-resume-blog/tree/main/docs/setup_website.md", "data-turbo": false, target: "_blank" %>
+        <br>
+        <br>
+        <%= link_to "Manage Locales", admin_locales_path %>
+        <br>
+        <br>
+        <%= link_to "Manage Subdomains", admin_subdomains_path %>
+        <br>
+        <br>
+        <%= link_to "Manage Themes", admin_themes_path %> <i class="fas fa-palette"></i>
+        <br>
+        <br>
+        <%= link_to "Settings", admin_settings_path %>
+        <br>
+        <br>
+        <%= link_to "GitHub App settings", admin_github_app_settings_path %>
+      </div>
+    </div>
+
     <br>
     <br>
     <%= button_to t(:log_out), session_path, method: :delete, class: "btn btn-primary my-2" if authenticated? %>
