--- a/app/views/admin/themes/index.html.erb
+++ b/app/views/admin/themes/index.html.erb
@@ -49,7 +49,7 @@
               <% end %>
             </td>
             <td>
-              <a href="<%= edit_admin_theme_path(theme) %>">
+              <a href="<%= edit_admin_theme_path(theme) %>" data-turbo-action="advance">
                 <button type="button" class="btn btn-sm btn-outline-primary">Edit Color</button>
               </a>
             </td>
