--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,7 @@
-<% content_for :title, "Posts" %>
+<%= turbo_frame_tag "visitor_frame" do %>
+<turbo-stream action="update" target="page-title">
+  <template><%= title(t(:blog_home)) %></template>
+</turbo-stream>
 
 <section class="theme-bg-light py-5">
   <%= tag.div(flash[:notice], class: "text-center text-success mb-2") if flash[:notice] %>
@@ -24,7 +27,7 @@
 
           <div class="col">
             <h3 class="title mb-1">
-              <a class="text-link" href="<%= post.path %>">
+              <a class="text-link" href="<%= post.path %>" data-turbo-action="advance">
                 <%= post.title %>
               </a>
             </h3>
@@ -36,24 +39,26 @@
 <!--              </span>-->
 
               <span>
-                <a class="text-link" href="<%= post.category.path %>"><%= post.category.name.titleize %></a>
+                <a class="text-link" href="<%= post.category.path %>" data-turbo-action="advance"><%= post.category.name.titleize %></a>
               </span>
 
               <% if authenticated? %>
                 <span>
-                  <a class="text-link" href="<%= edit_admin_post_path(post) %>">Edit</a>
+                  <a class="text-link" href="<%= edit_admin_post_path(post) %>" data-turbo="false">Edit</a>
                 </span>
               <% end %>
             </div>
             <div class="intro"><%= first_few_sentences(post.content) %>...</div>
-            <a class="text-link" href="<%= post.path %>"><%= t(:read_more) %> &rarr;</a>
+            <a class="text-link" href="<%= post.path %>" data-turbo-action="advance"><%= t(:read_more) %> &rarr;</a>
           </div>
         </div>
       </div>
     <% end %>
 
     <nav class="blog-nav nav nav-justified my-5">
-      <a class="nav-link-next nav-item nav-link rounded" href="<%= about_path %>"><%= t(:next_page) %><i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
+      <a class="nav-link-next nav-item nav-link rounded" href="<%= about_path %>" data-turbo-action="advance"><%= t(:next_page) %><i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
     </nav>
   </div>
 </section>
+
+<% end %>
