--- a/app/views/admin/email_subscribers/new.html.erb
+++ b/app/views/admin/email_subscribers/new.html.erb
@@ -33,7 +33,7 @@
 
       <div class="mt-4">
         <%= form.submit "Create Subscriber", class: "btn btn-primary" %>
-        <a href="<%= admin_email_subscribers_path %>">
+        <a href="<%= admin_email_subscribers_path %>" data-turbo-action="advance">
           <button type="button" class="btn btn-light ms-2"><%= t(:back) %></button>
         </a>
       </div>
