--- a/app/views/admin/locales/_form.html.erb
+++ b/app/views/admin/locales/_form.html.erb
@@ -37,7 +37,7 @@
 
   <div class="mt-4">
     <%= form.submit locale.persisted? ? "Update Locale" : "Create Locale", class: "btn btn-primary" %>
-    <a href="<%= admin_locales_path %>">
+    <a href="<%= admin_locales_path %>" data-turbo-action="advance">
       <button type="button" class="btn btn-light ms-2"><%= t(:back) %></button>
     </a>
   </div>
