--- a/app/views/admin/locales/index.html.erb
+++ b/app/views/admin/locales/index.html.erb
@@ -7,7 +7,7 @@
 
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h5>Locales</h5>
-      <a href="<%= new_admin_locale_path %>">
+      <a href="<%= new_admin_locale_path %>" data-turbo-action="advance">
         <button type="button" class="btn btn-primary btn-sm">Add New Locale</button>
       </a>
     </div>
@@ -43,7 +43,7 @@
             </td>
             <td>
               <div class="d-flex gap-2">
-                <a href="<%= edit_admin_locale_path(locale) %>">
+                <a href="<%= edit_admin_locale_path(locale) %>" data-turbo-action="advance">
                   <button type="button" class="btn btn-sm btn-outline-primary">Edit</button>
                 </a>
                 <%= button_to "Delete",
