--- a/app/views/admin/locales/new.html.erb
+++ b/app/views/admin/locales/new.html.erb
@@ -47,7 +47,7 @@
 
       <div class="mt-4">
         <%= form.submit "Create Locale", class: "btn btn-primary" %>
-        <a href="<%= admin_locales_path %>">
+        <a href="<%= admin_locales_path %>" data-turbo-action="advance">
           <button type="button" class="btn btn-light ms-2"><%= t(:back) %></button>
         </a>
       </div>
