--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -5,19 +5,19 @@
     </p>
 
     <div class="mt-3">
-      <a href="<%= new_admin_post_path %>">
+      <a href="<%= new_admin_post_path %>" data-turbo-action="advance">
         <button type="button" class="btn btn-primary"><%= t(:create_a_post) %></button>
       </a>
     </div>
     <br>
 
-    <%= link_to "Categories", admin_categories_path %>
+    <%= link_to "Categories", admin_categories_path, "data-turbo-action": "advance" %>
     <br>
     <br>
-    <%= link_to "Social media accounts", admin_social_media_accounts_path %>
+    <%= link_to "Social media accounts", admin_social_media_accounts_path, "data-turbo-action": "advance" %>
     <br>
     <br>
-    <%= link_to "Email Subscribers", admin_email_subscribers_path %>
+    <%= link_to "Email Subscribers", admin_email_subscribers_path, "data-turbo-action": "advance" %>
     <br>
     <br>
     <%= link_to "Jobs", jobs_path, "data-turbo": false, target: "_blank" %>
@@ -35,22 +35,22 @@
         <%= link_to t(:website_display), "https://github.com/resumeblog/markdown-resume-blog/tree/main/docs/setup_website.md", "data-turbo": false, target: "_blank" %>
         <br>
         <br>
-        <%= link_to "Manage Locales", admin_locales_path %>
+        <%= link_to "Manage Locales", admin_locales_path, "data-turbo-action": "advance" %>
         <br>
         <br>
-        <%= link_to "Manage Subdomains", admin_subdomains_path %>
+        <%= link_to "Manage Subdomains", admin_subdomains_path, "data-turbo-action": "advance" %>
         <br>
         <br>
-        <%= link_to "Manage Themes", admin_themes_path %> <i class="fas fa-palette"></i>
+        <%= link_to "Manage Themes", admin_themes_path, "data-turbo-action": "advance" %> <i class="fas fa-palette"></i>
         <br>
         <br>
-        <%= link_to "Settings", admin_settings_path %>
+        <%= link_to "Settings", admin_settings_path, "data-turbo-action": "advance" %>
         <br>
         <br>
-        <%= link_to "GitHub App settings", admin_github_app_settings_path %>
+        <%= link_to "GitHub App settings", admin_github_app_settings_path, "data-turbo-action": "advance" %>
       </div>
     </div>
 
-    <%= button_to t(:log_out), session_path, method: :delete, class: "btn btn-primary my-3" if authenticated? %>
+    <%= button_to t(:log_out), session_path, method: :delete, class: "btn btn-primary my-3", "data-turbo": false if authenticated? %>
   </div>
 </section>
