--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -12,7 +12,7 @@
 
     <div class="mt-3">
       <div class="d-flex flex-wrap gap-2 mb-3">
-        <a href="<%= admin_post_translations_path(@post) %>">
+        <a href="<%= admin_post_translations_path(@post) %>" data-turbo-action="advance">
           <button type="button" class="btn btn-info"><i class="fas fa-language me-1"></i> Manage Translations</button>
         </a>
 
