--- a/app/views/admin/subdomains/_form.html.erb
+++ b/app/views/admin/subdomains/_form.html.erb
@@ -31,7 +31,7 @@
 
   <div class="mt-4">
     <%= form.submit subdomain.persisted? ? "Update Subdomain" : "Create Subdomain", class: "btn btn-primary" %>
-    <a href="<%= admin_subdomains_path %>">
+    <a href="<%= admin_subdomains_path %>" data-turbo-action="advance">
       <button type="button" class="btn btn-light ms-2"><%= t(:back) %></button>
     </a>
   </div>
