--- a/app/views/admin/translations/_form.html.erb
+++ b/app/views/admin/translations/_form.html.erb
@@ -31,7 +31,7 @@
 
   <div class="mt-4">
     <%= form.submit translation.persisted? ? "Update Translation" : "Create Translation", class: "btn btn-primary" %>
-    <a href="<%= admin_post_translations_path(@post) %>">
+    <a href="<%= admin_post_translations_path(@post) %>" data-turbo-action="advance">
       <button type="button" class="btn btn-light ms-2"><%= t(:back) %></button>
     </a>
   </div>
