Added canonical url `<link rel="canonical" ../>` to header.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
       <% end %>
       <%= t(:blog_name) %>
     </title>
+
+    <link rel="canonical" href="<%= url_for(only_path: false, protocol: 'https') %>" />
     <meta name="description" content="<%= t(:headline) %>" />
     <meta name="author" content="<%= t(:author_name) %>" />
 
