Bugfix: Removed the duplicate site name from post title.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,10 @@
     <title>
       <% title = content_for(:title) %>
       <% if title.present? %>
-        <%= title %> -
+        <%= title %>
+      <% else %>
+        <%= t(:blog_name) %>
       <% end %>
-      <%= t(:blog_name) %>
     </title>
 
     <link rel="canonical" href="<%= url_for(only_path: false, protocol: 'https') %>" />
