Feature & Bugfix: Update the language menu links when URL changed; If a translation doesn't exist, in the post show page, display an `no title` information and ask robots not index the page; Bugfix: For the `<link rel="alternate" hreflang=`, only display the links which have translation.

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -15,7 +15,7 @@
 <section class="blog-list px-3 py-5 p-md-5">
   <div class="container single-col-max-width">
     <% @posts.each do |post| %>
-      <% post.translated! unless default_locale? %>
+      <% post.translated! %>
 
       <div class="item mb-5">
         <div class="row g-3 g-xl-0">
