--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,23 @@
       <% end %>
     </title>
 
+    <% if @post.present? && @post.title == I18n.t("post.no_title") %>
+    <meta name="robots" content="noindex, nofollow">
+    <% end %>
     <link rel="canonical" href="<%= url_for(only_path: false, protocol: 'https') %>" />
 
-    <% I18n.available_locales.each do |locale| %>
-    <link rel="alternate" hreflang="<%= locale.downcase %>" href="<%= locale_url_for(Locale.find_by(key: locale)) %>" />
+<% I18n.available_locales.each do |locale_key| %>
+  <% locale = Locale.find_by(key: locale_key) %>
+  <% if locale %>
+    <% has_translation = true %>
+    <% if locale_key != I18n.default_locale && @post.present? && Translation.find_by(post: @post, locale: locale).nil? %>
+      <% has_translation = false %>
     <% end %>
+    <% if has_translation %>
+    <link rel="alternate" hreflang="<%= locale_key.downcase %>" href="<%= locale_url_for(locale) %>" />
+    <% end %>
+  <% end %>
+<% end %>
     <link rel="alternate" hreflang="x-default" href="<%= locale_url_for(default_locale) %>" />
 
     <meta name="description" content="<%= t(:headline) %>" />
