--- a/app/views/posts/about.html.erb
+++ b/app/views/posts/about.html.erb
@@ -1,5 +1,7 @@
 <% title(@post.title) %>
 
+<%= render "shared/language_menu_updater" %>
+
 <article class="blog-post px-3 py-5 p-md-5">
   <div class="container single-col-max-width">
     <header class="blog-post-header">
