Used subdirectory to switch languages instead of using subdomain to switch languages. Removed subdomain related code.

--- a/app/views/admin/translations/index.html.erb
+++ b/app/views/admin/translations/index.html.erb
@@ -72,7 +72,7 @@
       <h6>Notes:</h6>
       <ul class="small text-muted">
         <li>The original post content is used when a translation is not available</li>
-        <li>Translations are displayed based on the visitor's selected locale (subdomain)</li>
+        <li>Translations are displayed based on the visitor's selected locale</li>
       </ul>
     </div>
   </div>
