--- a/app/views/shared/_language_menu_updater.html.erb
+++ b/app/views/shared/_language_menu_updater.html.erb
@@ -2,7 +2,7 @@
   <% locale = Locale.find_by(key: locale_key) %>
   <% if locale %>
     <turbo-stream action="update" target="locale_<%= locale.id %>">
-      <template><%= locale_link(locale) %></template>
+      <template><%= localed_link(locale) %></template>
     </turbo-stream>
   <% end %>
 <% end %>
