--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -25,7 +25,7 @@
 
           <div class="col">
             <h3 class="title mb-1">
-              <a class="text-link" href="<%= post.path %>" data-turbo-action="advance">
+              <a class="text-link" href="<%= localed(post.path) %>" data-turbo-action="advance">
                 <%= post.title %>
               </a>
             </h3>
@@ -37,7 +37,7 @@
 <!--              </span>-->
 
               <span>
-                <a class="text-link" href="<%= post.category.path %>" data-turbo-action="advance"><%= post.category.name.titleize %></a>
+                <a class="text-link" href="<%= localed(post.category.path) %>" data-turbo-action="advance"><%= post.category.name.titleize %></a>
               </span>
 
               <% if authenticated? %>
@@ -47,14 +47,14 @@
               <% end %>
             </div>
             <div class="intro"><%= first_few_sentences(post.content) %>...</div>
-            <a class="text-link" href="<%= post.path %>" data-turbo-action="advance"><%= t(:read_more) %> &rarr;</a>
+            <a class="text-link" href="<%= localed(post.path) %>" data-turbo-action="advance"><%= t(:read_more) %> &rarr;</a>
           </div>
         </div>
       </div>
     <% end %>
 
     <nav class="blog-nav nav nav-justified my-5">
-      <a class="nav-link-next nav-item nav-link rounded" href="<%= about_path %>" data-turbo-action="advance"><%= t(:next_page) %><i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
+      <a class="nav-link-next nav-item nav-link rounded" href="<%= localed(about_path) %>" data-turbo-action="advance"><%= t(:next_page) %><i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
     </nav>
   </div>
 </section>
