Updated some docs, especially made the `docs/GitHub_App.md` more detailed.

--- a/app/views/admin/settings/edit.html.erb
+++ b/app/views/admin/settings/edit.html.erb
@@ -32,6 +32,10 @@
         <% if @setting.target_url? %>
           <span>
             <%= @setting.target_url_base %><span id="value_target"><%= @setting.value %></span>
+            <% if @setting.key == "github_username" %>
+            <br>
+            <span>Or GitHub organization name.</span>
+            <% end %>
           </span>
         <% end %>
       </div>
