Added resume feature: Allowed user to create a resume with basic info and summary and display the resume; No tests added.

--- a/app/views/admin/main/root.html.erb
+++ b/app/views/admin/main/root.html.erb
@@ -10,6 +10,9 @@
       </a>
     </div>
     <br>
+    <%= link_to "Resumes", admin_resumes_path, "data-turbo-action": "advance" %>
+    <br>
+    <br>
     <%= link_to "Categories", admin_categories_path, "data-turbo-action": "advance" %>
     <br>
     <br>
