Allowed to CURD technical skills.

--- a/app/views/admin/locales/index.html.erb
+++ b/app/views/admin/locales/index.html.erb
@@ -8,7 +8,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h5>Locales</h5>
       <a href="<%= new_admin_locale_path %>" data-turbo-action="advance">
-        <button type="button" class="btn btn-primary btn-sm">Add New Locale</button>
+        <button type="button" class="btn btn-primary btn-sm">Add Locale</button>
       </a>
     </div>
 
