--- a/app/views/admin/email_subscribers/index.html.erb
+++ b/app/views/admin/email_subscribers/index.html.erb
@@ -8,7 +8,7 @@
     <div class="d-flex justify-content-between align-items-center">
       <h5>Email Subscribers</h5>
       <a href="<%= new_admin_email_subscriber_path %>" data-turbo-action="advance">
-        <button type="button" class="btn btn-primary btn-sm">Add New Subscriber</button>
+        <button type="button" class="btn btn-primary btn-sm">Add Email Subscriber</button>
       </a>
     </div>
 
